--- a/Sentimenal_Analysis_Models.ipynb
+++ b/Sentimenal_Analysis_Models.ipynb
@@ -57,14 +57,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = kagglehub.dataset_download(\"snap/amazon-fine-food-reviews\") #force=True to re-download if needed\n",
+    "path = kagglehub.dataset_download(\"PATH") #force=True to re-download if needed\n",
     "\n",
     "print(\"Path to downloaded dataset:\", path)\n",
     "\n",
     "version_folder = os.path.basename(path)\n",
     "\n",
     "source_path = os.path.join(os.path.dirname(path), version_folder)\n",
-    "destination_path = r\"C:\\Users\\Rishi Thakur\\RISHI_THAKUR_PY_PROGRAMS\\UI EduCon\\archive\"\n",
+    "destination_path = r\"archive\"\n",
     "\n",
     "try:\n",
     "    os.makedirs(destination_path, exist_ok=True)\n",
